# zzrpc-tutorial

./: Cargo.toml  README.md
client/: Cargo.toml
client/src/: main.rs
common/: Cargo.toml
common/src/: api.rs
server/: Cargo.toml
server/src/: main.rs
