[package]
name = "server"
version = "0.1.0"
authors = ["zduny <dzduniak@gmail.com>"]
edition = "2021"
description = "zzrpc tutorial server"
license = "Apache-2.0"
repository = "https://github.com/zduny/zzrpc-tutorial"

[dependencies]
common = { path = "../common" }
mezzenger = "0.1.2"
serde = { version = "1.0.150", features = ["derive"] } 
zzrpc = { path = "../../web-framework/zzrpc/zzrpc" }
kodec = { version = "0.1.0", features = ["binary"] }
mezzenger-tcp = "0.1.1"
futures = "0.3.25"
tokio = { version = "1.23.0", features = ["full"] }
tokio-stream = { version = "0.1.11", features = ["sync"] } 